tests/valid/do/v09_do_basic.f
program dobasic
  integer i, soma
  soma = 0
  do 10 i = 1, 10
    soma = soma + i
10 continue
  print *, soma
end
