tests/invalid/do/i13_uninit_do_bound.f
program uninitdo
  integer i, n, soma
  soma = 0
  do 10 i = 1, n
    soma = soma + i
10 continue
  print *, soma
end
